--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~50.0.7",
     "expo-image-picker": "~14.7.1",
     "expo-sqlite": "~13.2.2",
